--- a/package.json
+++ b/package.json
@@ -13,9 +13,11 @@
     "@fortawesome/fontawesome-svg-core": "^6.2.1",
     "@fortawesome/free-solid-svg-icons": "^6.2.1",
     "@fortawesome/react-native-fontawesome": "^0.3.0",
+    "@react-native-community/async-storage": "^1.12.1",
     "@react-native-seoul/kakao-login": "^4.2.3",
     "@react-navigation/native": "^6.0.11",
     "@react-navigation/stack": "^6.2.2",
+    "axios": "^1.1.3",
     "react": "18.0.0",
     "react-hook-form": "^7.39.1",
     "react-native": "0.69.1",
