--- a/package.json
+++ b/package.json
@@ -26,6 +26,7 @@
     "react-native-screens": "^3.15.0",
     "react-native-svg": "^13.6.0",
     "react-native-svg-transformer": "^1.0.0",
+    "react-query": "^3.39.2",
     "styled-components": "^5.3.5"
   },
   "devDependencies": {
