--- a/package.json
+++ b/package.json
@@ -17,6 +17,7 @@
     "@react-native-seoul/kakao-login": "^4.2.3",
     "@react-navigation/native": "^6.0.11",
     "@react-navigation/stack": "^6.2.2",
+    "@reduxjs/toolkit": "^1.9.1",
     "axios": "^1.2.0",
     "react": "18.0.0",
     "react-hook-form": "^7.39.1",
@@ -27,6 +28,10 @@
     "react-native-svg": "^13.6.0",
     "react-native-svg-transformer": "^1.0.0",
     "react-query": "^3.39.2",
+    "react-redux": "^8.0.5",
+    "redux": "^4.2.0",
+    "redux-flipper": "^2.0.2",
+    "redux-persist": "^6.0.0",
     "styled-components": "^5.3.5"
   },
   "devDependencies": {
